src/objects/BrokerInfo__c.object
<CustomObject>
    <fields>
        <fullName>Cl_Prop__c</fullName>
        <label>Cl_Prop</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>BrokerInfo</relationshipLabel>
        <relationshipName>BrokerInfo</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>BrokerInfo</relationshipLabel>
        <relationshipName>BrokerInfo</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>BrokerInfo</label>
    <nameField>
        <displayFormat>BI-{00000000}</displayFormat>
        <label>BrokerInfoName</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BrokerInfo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>